# ch32v103-template

./: CMakeLists.txt  README.md
.githooks/: pre-commit
.github/workflows/: build.yml
apps/: adc_dma.c  adc_interrupt.c  adc_polling.c  app_framework.h  app_main.c  flash.c  gpio_interrupt.c  gpio_polling.c  hello.c  i2c_dma.c  i2c_interrupt.c  i2c_polling.c  rtc.c  spi_dma.c  spi_interrupt.c  spi_polling.c  timer_interrupt.c  timer_pwm.c  uart_dma.c  uart_interrupt.c  uart_polling.c  watchdog.c
apps/framework/: app_framework.c  app_framework.h
core/: app.c  main.cpp
system/: syscalls.c
